@@ -1,5 +1,3 @@
-cmake_minimum_required (VERSION 3.4)
-
 #
 # Synergy Version
 #
